# zen-config

./: .gitignore  pyproject.toml
src/zen_config/: train.py
src/zen_config/conf/: base_configs.py
src/zen_config/conf/data/: debug.yaml
src/zen_config/conf/model/: common_values.yaml  large.yaml  small.yaml
src/zen_config/conf/optimizer/: adam.yaml
src/zen_config/hydra_zen/: train.py
src/zen_config/hydra_zen/conf/: config.yaml  config_schemas.py  config_store.py
src/zen_config/hydra_zen/conf/data/: debug.yaml
src/zen_config/hydra_zen/conf/model/: large.yaml  small.yaml
src/zen_config/hydra_zen/conf/optimizer/: adam.yaml
src/zen_config/omegaconf/: train.py
src/zen_config/omegaconf/conf/: config.yaml
src/zen_config/omegaconf/outputs/2025-05-21/15-51-46/.hydra/: hydra.yaml
src/zen_config/omegaconf/outputs/2025-05-21/23-46-57/.hydra/: hydra.yaml
src/zen_config/outputs/2025-05-21/15-23-39/.hydra/: config.yaml  hydra.yaml
src/zen_config/outputs/2025-05-21/15-24-38/.hydra/: hydra.yaml
src/zen_config/outputs/2025-05-21/15-25-22/.hydra/: config.yaml  hydra.yaml
src/zen_config/outputs/2025-05-21/15-27-59/.hydra/: config.yaml  hydra.yaml
src/zen_config/outputs/2025-05-21/15-28-57/.hydra/: config.yaml  hydra.yaml
